Add mock adapter tests and clean up repository
- Add test_mock_adapter_can_loopback test with CAN message validation
- Add test_mock_adapter_serial_loopback test for serial interface
- Update test_registry.yaml with mock_adapter test suite configuration
- Remove temporary documentation files (PROJECT_NAMING.md, PROJECT_SUMMARY.md, TEST_RESULTS.md, VALIDATION_REPORT.md)
- Add gitignore entries to prevent committing temporary docs in future

Tests demonstrate configuration-driven framework with mock adapters working correctly.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ Thumbs.db
 test_data/output/
 *.pcap
 *.log
+
+# Exclude temporary documentation files
+PROJECT_NAMING.md
+PROJECT_SUMMARY.md
+TEST_RESULTS.md
+VALIDATION_REPORT.md
