--- a/config/test_registry.yaml
+++ b/config/test_registry.yaml
@@ -36,6 +36,22 @@ test_suites:
         priority: "medium"
         description: "Test CAN message filtering"
         platforms: ["all"]
+  
+  mock_adapter:
+    description: "Mock adapter tests"
+    platforms: ["mock_platform"]
+    tests:
+      - name: "test_mock_adapter_can_loopback"
+        category: "regression"
+        priority: "low"
+        description: "Test mock adapter CAN loopback"
+        platforms: ["mock_platform"]
+
+      - name: "test_mock_adapter_serial_loopback"
+        category: "regression"
+        priority: "low"
+        description: "Test mock adapter Serial loopback"
+        platforms: ["mock_platform"]
 
   diagnostics:
     description: "UDS and diagnostic protocol tests"
