Remove outdated documentation and validation files
- Remove HANDOFF_SUMMARY.md (replaced by README.md)
- Remove GETTING_STARTED.md (outdated decorator approach, README.md has current info)
- Remove validate_framework.py (framework is now established with working tests)
- Add files to gitignore to prevent future commits

The README.md now contains all necessary setup and usage information for the configuration-driven approach.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ PROJECT_NAMING.md
 PROJECT_SUMMARY.md
 TEST_RESULTS.md
 VALIDATION_REPORT.md
+
+# Exclude validation and old documentation files
+HANDOFF_SUMMARY.md
+GETTING_STARTED.md
+validate_framework.py
