Remove CLAUDE.md from remote repository
Keep CLAUDE.md as local-only development guide for future Claude instances.
Added to gitignore to prevent accidental commits.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ VALIDATION_REPORT.md
 HANDOFF_SUMMARY.md
 GETTING_STARTED.md
 validate_framework.py
+
+# Claude development guide (keep local only)
+CLAUDE.md
