Implement Phase 1: Simplified adapter creation with auto-discovery
Major improvements to adapter development workflow:

🎯 Reduced adapter creation from 5 steps to 3 steps:
1. Copy template + customize placeholders
2. Add YAML configuration
3. Use in tests (automatic everything else)

✨ New Features:
- Complete adapter template system in framework/templates/
- Auto-discovery: hardware.{name}_interface automatically works
- Auto-fixtures: {name}_interface test parameters work automatically
- Mock adapter auto-selection based on platform config
- Template placeholders for easy customization
- Comprehensive template documentation

🔧 Auto-Discovery Implementation:
- HAL __getattr__ method for dynamic adapter loading
- Adapter caching and configuration loading
- Error handling with helpful messages
- Adapter discovery and info methods

📚 Enhanced Documentation:
- Architecture layer explanations with ASCII diagram
- 3-step simplified process documentation
- Auto-discovery feature descriptions
- Template usage instructions

✅ Validated with SPI adapter example:
- Created functional SPI adapter from template
- Mock adapter working with byte inversion behavior
- Configuration loading from YAML
- All auto-discovery features working

Phase 2 (generator script) can build on this foundation.

--- a/config/hardware/mock_platform.yaml
+++ b/config/hardware/mock_platform.yaml
@@ -31,6 +31,12 @@ interfaces:
       wakeup: 2
       led_status: 3
 
+  spi:
+    type: "mock"
+    device_path: "/dev/spidev0.0"
+    speed: 1000000
+    mode: 0
+
 sensors:
   temperature:
     type: "mock"
