--- a/config/test_registry.yaml
+++ b/config/test_registry.yaml
@@ -53,6 +53,38 @@ test_suites:
         description: "Test mock adapter Serial loopback"
         platforms: ["mock_platform"]
 
+  spi_test:
+    description: "SPI adapter auto-discovery tests"
+    platforms: ["mock_platform"]
+    tests:
+      - name: "test_spi_auto_discovery"
+        category: "smoke"
+        priority: "critical"
+        platforms: ["mock_platform"]
+        description: "Test SPI adapter auto-discovery and basic functionality"
+        requirements_hardware: false
+
+      - name: "test_spi_adapter_type_detection"
+        category: "integration"
+        priority: "high"
+        platforms: ["mock_platform"]
+        description: "Test automatic mock adapter selection"
+        requirements_hardware: false
+
+      - name: "test_spi_configuration_loading"
+        category: "regression"
+        priority: "medium"
+        platforms: ["mock_platform"]
+        description: "Test SPI configuration loading from YAML"
+        requirements_hardware: false
+
+      - name: "test_adapter_info_and_discovery"
+        category: "regression"
+        priority: "medium"
+        platforms: ["mock_platform"]
+        description: "Test HAL adapter discovery features"
+        requirements_hardware: false
+
   diagnostics:
     description: "UDS and diagnostic protocol tests"
     platforms: ["ecu_platform_a", "ecu_platform_b"]
