Implement Phase 2: One-command adapter generation with CLI adapter
## Phase 2 Features:
- One-command adapter generation via scripts/create_adapter.py
- Complete CLI adapter with serial/SSH support and output comparison
- Production-ready 600+ line adapters with comprehensive error handling
- Automatic test suite generation with 11 comprehensive test scenarios
- Mock adapters with programmable responses for CI/CD testing

## CLI Adapter Capabilities:
- Serial (/dev/tty*) and SSH command execution
- Output capture and comparison with diff generation
- Configurable prompt patterns and timeouts
- Command history tracking (mock adapter)
- Buffer management and cleanup
- Whitespace normalization and case-insensitive comparison

## Generated Components:
- framework/adapters/cli_adapter.py (600+ lines, production-ready)
- tests/suites/cli_tests/test_cli_comprehensive.py (11 comprehensive tests)
- scripts/create_adapter.py (one-command generator)
- Updated config/test_registry.yaml with CLI test metadata
- Enhanced mock platform configuration with CLI interface support
- Added paramiko dependency for SSH communication

## Docker Integration:
- Verified full test suite passes in Docker environment (11/11 tests)
- Mock platform properly configured for containerized testing
- Added CLI interface fixture for auto-discovery

--- a/config/hardware/mock_platform.yaml
+++ b/config/hardware/mock_platform.yaml
@@ -37,6 +37,15 @@ interfaces:
     speed: 1000000
     mode: 0
 
+  cli:
+    type: "mock"
+    connection_type: "serial"
+    device_path: "/dev/ttyUSB0"
+    baudrate: 115200
+    timeout: 5.0
+    command_timeout: 10.0
+    prompt_pattern: '[\$#>]\s*$'
+
 sensors:
   temperature:
     type: "mock"
