Implement automatic Docker device mapping
Features:
- Auto-discovery script (scripts/auto_docker.py) analyzes platform configs
- Extracts device paths from interface configurations automatically
- Generates Docker --device mappings without manual specification
- Smart filtering: skips mock interfaces and virtual devices
- Simple wrapper script (auto_test.sh) for one-command testing

User Experience:
- Before: docker run --device=/dev/ttyUSB8:/dev/ttyUSB8 automotive-tests
- After:  ./auto_test.sh my_platform -m smoke

Technical Implementation:
- Platform-aware device discovery from YAML configurations
- Interface-to-device mapping (CLI->device_path, CAN->channel, etc.)
- Automatic Docker image building and container management
- Enhanced docker-compose.yml with flexible device configuration
- Comprehensive documentation with migration guide

Benefits:
- Eliminates manual device mapping errors
- Platform configuration drives hardware access
- Development-friendly with missing device handling
- CI/CD ready with mock platform support

Example platform config automatically maps /dev/ttyUSB8 for CLI interface
while skipping mock CAN interfaces entirely.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,10 @@ services:
       dockerfile: Dockerfile
     container_name: automotive-tests
     
-    # Hardware device access
-    devices:
-      - "/dev/ttyUSB0:/dev/ttyUSB0"  # Serial port
-      - "/dev/can0:/dev/can0"          # CAN interface
-      # Add more devices as needed:
-      # - "/dev/i2c-1:/dev/i2c-1"
-      # - "/dev/spidev0.0:/dev/spidev0.0"
+    # Hardware device access - automatically managed by auto_docker.py
+    # To add custom devices, create docker-compose.override.yml or use:
+    # python scripts/auto_docker.py compose --platform your_platform
+    devices: []  # Will be populated by auto_docker.py or override file
     
     # Required capabilities for network interfaces
     cap_add:
@@ -52,8 +49,12 @@ services:
     profiles:
       - mock  # Only start with: docker-compose --profile mock up
 
-# Usage examples:
+# Usage examples (RECOMMENDED - automatic device mapping):
+# ./auto_test.sh my_platform -m smoke                         # Auto device mapping
+# python scripts/auto_docker.py run --platform my_platform    # Direct auto mapping
+# python scripts/auto_docker.py compose --platform my_platform && docker-compose up
+
+# Usage examples (traditional):
 # docker-compose up                                    # Run smoke tests
 # docker-compose run test-runner -m can_bus           # Run CAN tests
-# docker-compose run test-runner tests/suites/can_bus # Run specific suite
 # HARDWARE_PLATFORM=ecu_platform_b docker-compose up  # Use different platform
