Fix pytest warnings and collection issues
- Add missing pytest markers to config/pytest.ini
- Rename TestMetadata -> TestMetadataConfig to avoid pytest collection
- Rename TestRegistry -> TestRegistryManager to avoid pytest collection
- Update Pydantic config to use ConfigDict instead of deprecated Config class
- Add dynamic marker registration in conftest.py
- Add --rebuild option to auto_test.sh for forcing Docker image updates

This eliminates PytestUnknownMarkWarning, PytestCollectionWarning, and
PydanticDeprecatedSince20 warnings that were cluttering test output.

--- a/config/pytest.ini
+++ b/config/pytest.ini
@@ -79,6 +79,15 @@ markers =
     requires_hardware: Tests requiring actual hardware (not mocked)
     wip: Work in progress tests (skipped by default)
 
+    # Dynamic markers (from test registry)
+    mock_adapter: Mock adapter specific tests
+    spi_test: SPI interface tests
+    cli_tests: CLI interface tests
+    platform_ecu_platform_a: Platform A specific tests
+    platform_ecu_platform_b: Platform B specific tests
+    platform_mock_platform: Mock platform tests
+    platform_custom_cli_platform: Custom CLI platform tests
+
 # Timeout settings
 timeout = 300
 timeout_method = thread
